devops-tools/overlays/jenkins/prod-slave/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  template:
    spec:
      serviceAccountName: jenkins-admin-slave
      containers:
        - name: jenkins
          volumeDevices:
            - devicePath: /var/jenkins_home_slave
              name: jenkins-data-slave
      volumes:
        - name: jenkins-data-slave
          persistentVolumeClaim:
              claimName: jenkins-pv-claim
